Criação do projeto index e style, completo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,60 @@
 </head>
 
 <body>
+    <div id="geral">
+        <!-- header -->
+        <header class="header">
+            <div class="navbar-corner-left">
+                <div class="menu-hamburger">
+                    <img src="/images/Vector (3).png" alt="menu-hamburger">
+                    <img class="menor" src="/images/Vector (2).png" alt="menu-hamburger">
+                    <img src="/images/Vector (1).png" alt="menu-hamburger">
+                    <img class="menor" src="/images/Vector.png" alt="menu-hamburger">
+                </div>
 
+                <div>
+                    <img class="search" src="/images/search.png" alt="search">
+                </div>
+            </div>
+
+            <div>
+                <img class="logoHBO" src="/images/image 8.png" alt="Logo-Hbo-Max">
+            </div>
+
+            <div class="navbar-corner-right">
+                <ul>
+                    <li>Assinar</li>
+                    <li>Entrar</li>
+                </ul>
+            </div>
+        </header>
+
+        <!-- main section -->
+        <div id="container">
+            <div class="title">
+                <h1>Entrar</h1>
+                <h2>Você tem uma conta HBO Max?</h2>
+            </div>
+
+            <form>
+                <label>E-mail</label>
+                <input type="email" name="emai" placeholder="email@email.com">
+
+                <label>Senha</label>
+                <input type="password" name="senha" placeholder="*********">
+
+                <button class="btn1" type="submit">Entrar</button>
+            </form>
+
+            <div class="submit">
+                <h2>
+                    Você acessa a HBO Max por um provedor de TV, de internet ou celular?
+                </h2>
+
+                <button class="btn2" type="submit">Entrar com provedor</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
